@@ -1,9 +1,20 @@
 #include <ctype.h>
 #include <string.h>
+
 int return3()
 {
   return 3;
 }
+
+
+// for x86-64
+// 6 register arguments + 2 stack arguments
+int add8(int x1, int x2, int x3, int x4, int x5, int x6, int x7, int x8)
+{
+  printf("%d %d %d %d %d %d %d %d \n", x1, x2, x3, x4, x5, x6, x7, x8);
+  return x1 + x2 + x3 + x4 + x5 + x6 + x7 + x8;
+}
+
 
 int sub(int a, int b)
 {
